--- a/src/main/resources/pageobject/merchandisemenu/menu.properties
+++ b/src/main/resources/pageobject/merchandisemenu/menu.properties
@@ -38,3 +38,5 @@ loc_totalprice=CssSelector:.value
 loc_quantity=CssSelector:input[class='quantityInput']
 
 loc_update=CssSelector:.updateQuantity
+
+loc_close=CssSelector:#simplemodal-container>a
