--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,7 @@
 
 #Browser name and url
 browserName=internetexplorer
-url=http://10.10.10.232:8080/
+
+heatClinicUrl=http://10.10.10.232:8080/
+
+ninjaStoreUrl=http://tutorialsninja.com/demo/
