jenkins parameter configuration

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<java.jdk>1.8</java.jdk>
 		<apache.ooxml>4.0.0</apache.ooxml>
 		<mysql.connector>8.0.18</mysql.connector>
+		<extentreports>3.1.5</extentreports>
 	</properties>
 	<profiles>
 		<profile>
@@ -101,5 +102,11 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>${apache.ooxml}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>${extentreports}</version>
+		</dependency>
+
 	</dependencies>
 </project>
